# tian-scripts

./: .bashrc-example  .env.copy  .env.test  .gitignore  .lfsconfig  .mailmap  Dockerfile  Dockerfile.base  Dockerfile.pytorch-base  Dockerfile.pytorch-service  Dockerfile.webhooks  README.md  alembic.ini  cdo  cli.py  co  gib  gibdel  gmerge  gpo  gwip  llm-monitor.sh  pyproject.toml
.github/workflows/: abuse_check_recent_activity_volume.yml  abuse_check_recent_signups.yml  backfill-gen-image-urls.yml  build_and_push_embeddings_docker.yml  categorize_messages.yml  consolidate-memories.yml  create_cashout_override.yml  cronjob.yml  deploy-create-env.yml  deploy-staging-on-migration.yml  deploy-v2.yml  deploy-webhooks.yml  deploy.yml  generate-invite-codes-for-yuppster.yml  generate-invite-codes.yml  judge_quick_response_quality.yml  judge_refusals.yml  label_refusals.yml  lint_and_test.yml  llm-discovery.yml  marketing_emails.yml  model-metadata-maintenance.yml  post-amplitude-metrics.yml  post-analytics.yml  post-offchain-details.yml  post-onchain-details.yml  post-source-account-balances.yml  refresh-conversation-starters.yml  refresh_reward_rules.yml  reset-yuppster-points.yml  rollback.yml  send_marketing_emails.yml  send_monthly_summary_emails.yml  shellcheck.yml  store_prompt_language.yml  update_docker_base.yml  update_model_metrics.yml  update_ranking.yml  validate-active-models.yml  validate-ledger-balance.yml  (+2 more)
.github/workflows/scripts/: generate_gcloud_deploy_secrets_string.py
alembic/: README  env.py
alembic/versions/: 2024_08_09_-04c8093a862b_initial_schema_for_chat.py  2024_08_09_-71bac2669557_mark_chat_message_abstract.py  2024_08_12_-6603078f1072_add_user_chat_foreign_key.py  2024_08_14_-bc010c576bd1_create_evals_table.py
assets/: mturk_promptstart.html
backend/: config.py  db.py  entrypoint.sh  prompts.py  server.py
backend/llm/: chat.py  constants.py  cost.py  embedding.py  external.py  judge.py  labeler.py  mab_ranker.py  mab_router.py  prompt_classifiers.py  ranking.py  routing.py  synthesize.py  utils.py
backend/llm/routing/: policy.py  router.py
backend/routes/: main.py
backend/routes/v1/: health.py  highlight_similar_content.py  rank.py  route.py
backend/tests/: README.md  conftest.py  test_chat.py  test_health.py  test_mab_ranker.py  test_mab_router.py  test_ranking.py  test_routing.py  test_utils.py  utils.py
data/: language_codes.yml  reward_rules.yml
db/: README.md  all_models.py  base.py  chats.py  language_models.py  point_transactions.py  ranking.py  ratings.py  users.py
db/alembic/: env.py
db/alembic/versions/: 2024_08_09_2229-d5cfe1dc3120_required_schema_for_auth_js.py  2024_08_14_-bc010c576bd1_create_evals_table.py  2024_08_20_-2d08069e640c_new_eval_types_for_quick_take.py  2024_08_21_-bb9efb5302a2_add_ratings_table.py  2024_08_21_-c038d6705e19_add_categories_table.py  2024_08_21_2048-ea6676883cd1_add_language_models_table.py  2024_08_26_-af6f557f2601_add_points_to_user_table_and_create_.py  2024_08_26_-c46f020ab21c_make_is_public_non_null.py  2024_08_27_2025-349401e65d76_make_categories_unique.py  2024_08_28_-b35fa39d0be1_add_snapshot_time_wins_losses_to_.py  2024_09_03_0258-ff3537d3773c_cleanup_user_session_cascade.py  2024_09_08_1549-238a41c46089_rename_model_id_to_language_model_id.py  2024_09_09_1834-de6604182021_add_category_relationship_to_chatmessage.py  2024_09_09_2328-3182edb09610_add_backfill_and_user_attributes_tables.py  2024_09_10_0722-5bc7b317f2fc_add_providers_table_and_link_models_.py  2024_09_11_1106-311434a373e4_use_int64_instead_of_numeric_for_.py  (+2 more)
db/schemaspy/: deletionOrder.txt  relationships.html  verceldb.public.xml
db/schemaspy/tables/: accounts.html  (+5 more)
docs/diagrams/: running-statistics.md
docs/guides/: yuppfill.md
envs/: dev.yml
notebooks/: .gitattributes  README.md  bootstrap_study.ipynb  categorizer_evaluation.ipynb  compare_vendors.ipynb  cost_with_router_analysis.ipynb  eval_highlighting.ipynb  finetune_quicktake_truncations.ipynb  finetune_wildchat_openai.ipynb  gpu_cost_analysis.ipynb  import_ls_ratings.ipynb  ls_elo_comparison.ipynb  ls_prompt_quality.ipynb  prompt_labeler_analysis.ipynb  prompt_quality_llm_judge.ipynb  prompt_tags_study.ipynb  qt_gen.ipynb  qt_judge_external_dataset.ipynb  qt_quality.ipynb  quicktake_gather_prompts.ipynb  quicktake_quality_analysis.ipynb  refusal_labeler.ipynb  reward_analysis.ipynb  reward_comments.ipynb  route_feedback.ipynb  routing_study.ipynb  simple-router-analysis.ipynb  test_quick_response_quality_labeler.ipynb  vendor_quality_run.ipynb
notebooks/data/: .gitattributes  45k-synthetic-examples.json  ah_sample.jsonl  ah_sample.out.jsonl  bootstrap_study.csv  fine-tuning-15k.jsonl  fine-tuning-30k.jsonl  fine-tuning-50k-personaless.jsonl  fine-tuning-5k.jsonl  full-table.csv  helm_sample.jsonl  helm_sample.out.jsonl  personaless-fine-tuning-clean-12k.jsonl  personaless-fine-tuning-clean-6k.jsonl  personaless-fine-tuning-clean-clean-12k.jsonl  raw-lmsys-data.json  table.csv  wildchat_sample.jsonl  wildchat_sample.out.jsonl
proxy/: README.md  openapi2-functions.yaml
tests/: conftest.py
ypl/: __init__.py  __version__.py  cache.py  cli.py  logger.py  utils.py
ypl/backend/: README-rewards.md  config.py  db.py  entrypoint.sh  prompts.py  rw_cache.py  server.py
ypl/db/: README.md  abuse.py  all_models.py  app_feedback.py  attachments.py  base.py  chats.py  emails.py  embeddings.py  events.py  invite_codes.py  language_models.py  memories.py  message_annotations.py  model_promotions.py  naughty_list.py  payments.py  point_transactions.py  ratings.py  reasons.py  redis.py  reviews.py  rewards.py  routing_info.py  scribbles.py  soul_rbac.py  trends.py  users.py  webhooks.py  yapps.py
ypl/embeddings/: Dockerfile  README.md  entrypoint.sh  run_docker.sh  server.py  test_server.py
ypl/partner_payments/: __init__.py
ypl/pytorch/: cli.py  torch_utils.py  trainer.py
ypl/random_word_slugs/: __init__.py  generate.py  words.py
ypl/training/: cli.py  torch_utils.py  trainer.py
ypl/webhooks/: README.md  __init__.py  entrypoint.sh  server.py
(+587 files in other folders)
